# dlframework

./: .bumpversion.cfg  .editorconfig  .gitignore  .travis.yml  BUILD.bazel  Gopkg.toml  Makefile  README.md  WORKSPACE  azure-pipelines.yml  dlframework.pb.go  dlframework.pb.gw.go  dlframework.proto  dlframework.swagger.json  dlframework_easyjson.go  dlframeworkpb_test.go  docker-compose.yml  feature_compare.go  feature_utils.go  featurecomparemethod_enumer.go  features.go  features.pb.go  features.proto  featurespb_test.go  framework.go  generate.go  glide.yaml  go.mod  modalities.go  model.go  model_test.go  prediction.go  predictor.pb.go  predictor.pb.gw.go  predictor.proto  predictorpb_test.go  registry.go  registry.pb.go  registry.pb.gw.go  registry.proto  (+11 more)
dockerfiles/base/: BUILD.bazel  Dockerfile.amd64_cpu  Dockerfile.amd64_cpu_mlperf  Dockerfile.amd64_gpu  Dockerfile.amd64_gpu_mlperf  Dockerfile.ppc64le_cpu  Dockerfile.ppc64le_gpu  Makefile  rai_build.yml
downloadmanager/: BUILD.bazel  cache.go  downloadmanager.go  init.go
framework/: BUILD.bazel  init.go  register.go  registry.go
framework/agent/: BUILD.bazel  agent.go  agent_easyjson.go  lifetime.go  options.go  predictor.go  predictors.go  publish.go  registry.go  utils.go
framework/cmd/: BUILD.bazel  config.go  eval_defaults.go  info.go  info_cuda.go  init.go  root.go  utils.go
framework/dockerfiles/: Dockerfile.amd64_cpu  Makefile
framework/feature/: audio.go  bbox.go  boundingbox.go  classification.go  feature.go  geolocation.go  image.go  instance_segment.go  instancesegment.go  options.go  raw_image.go  region.go  segment.go  semantic_segment.go  text.go
framework/options/: BUILD.bazel  config.go  default.go  init.go  options.go  types.go
framework/powerai/: Dockerfile
framework/predict/: BUILD.bazel  base.go  defaults.go  features.go  image_predictor.go  init.go  log  predict.go  predictor.go  text_predictor.go  utils.go
framework/predictor/: base.go  defaults.go  image_predictor.go  init.go  predictor.go  raw_predictor.go  utils.go
framework/provisioner/: init.go
frameworks/caffe2/: BUILD.bazel  builtin_models_static.go  caffe2.pb.go  caffe2_legacy.pb.go  metanet.pb.go  prof_dag.pb.go  resource_gen.go
frameworks/common/: BUILD.bazel  init.go  register.go  registry.go
frameworks/mxnet/: BUILD.bazel  builtin_models_static.go  builtin_models_test.go  framework.go  graph.go  graph_test.go  init.go  model_test.go  mxnet.pb.go  mxnet.proto  mxnetpb_test.go  register.go  resource_gen.go
frameworks/tensorflow/: BUILD.bazel  allocation_description.pb.go  attr_value.pb.go  builtin_models_static.go  checkpoint_test.go  cluster.pb.go  config.pb.go  control_flow.pb.go  cost_graph.pb.go  debug.pb.go  device_attributes.pb.go  device_properties.pb.go  error_codes.pb.go  function.pb.go  graph.pb.go  graph_transfer_info.pb.go  kernel_def.pb.go  log_memory.pb.go  master.pb.go  master_service.pb.go  meta_graph.pb.go  named_tensor.pb.go  node_def.pb.go  op_def.pb.go  op_gen_overrides.pb.go  queue_runner.pb.go  register.go  remote_fused_graph_execute_info.pb.go  resource_gen.go  resource_handle.pb.go  rewriter_config.pb.go  saved_model.pb.go  saver.pb.go  step_stats.pb.go  summary.pb.go  tensor.pb.go  tensor_bundle.pb.go  tensor_description.pb.go  tensor_slice.pb.go  tensorflow_server.pb.go  (+5 more)
http/: BUILD.bazel  agent.go  authboss_setup.go  authenticate.go  authentication.go  error.go  frameworks.go  frameworks_test.go  http.go  http_test.go  init.go  login.go  models.go  models_test.go  predict.go  registry.go  signup.go  storer.go
httpapi/client/: BUILD.bazel  dlframework_client.go
httpapi/models/: BUILD.bazel  codec.generate.go  dataset_request_dataset.go  dlframework_agent.go  dlframework_agent_frameworks.go  dlframework_agents.go  dlframework_agents_agents.go  dlframework_audio.go  dlframework_audio_feature.go  dlframework_bounding_box.go  dlframework_classification.go  dlframework_classification_feature.go  dlframework_clear_request.go  dlframework_clear_response.go  dlframework_container_hardware.go  dlframework_cpu_options.go  dlframework_dataset_request.go  dlframework_error_status.go  dlframework_execution_options.go  dlframework_feature.go  dlframework_feature_response.go  dlframework_feature_response_features.go  dlframework_feature_type.go  dlframework_features_response.go  dlframework_features_response_responses.go  dlframework_framework_manifest.go  dlframework_framework_manifest_container.go  dlframework_framework_manifests_response.go  dlframework_framework_manifests_response_manifests.go  dlframework_framework_request.go  dlframework_frameworks_request.go  dlframework_frameworks_response.go  dlframework_g_p_u_options.go  dlframework_geo_location.go  dlframework_geometry_region.go  dlframework_gpuoptions.go  dlframework_image.go  dlframework_image_feature.go  dlframework_images_request.go  dlframework_images_request_image.go  (+61 more)
httpapi/restapi/: BUILD.bazel  configure_dlframework.go  doc.go  embedded_spec.go  server.go
registryquery/: BUILD.bazel  agent.go  frameworks.go  frameworks_test.go  init.go  models.go  models_test.go
scripts/: BUILD.bazel  add_swagger_version.sh  includetext.go  install-protobuf.sh
steps/: BUILD.bazel  as_bgr_image.go  as_rgb_image.go  base.go  batch.go  cast_to_float32_slice.go  crop_image.go  download_dataset.go  foreach.go  get_dataset.go  ider.go  image_predict.go  init.go  list_dataset.go  partition.go  predict.go  predict_image.go  predict_image_classification.go  predict_object_detection.go  preprocess_image.go  preprocess_image_tensor.go  read_image.go  read_url.go  send_features.go  spread.go  steps_test.go  utils.go
types/: BUILD.bazel  constructor.go  fresh.go  init.go  prims.go
web/client/: BUILD.bazel  dlframework_client.go
web/models/: BUILD.bazel  dlframework_container_hardware.go  dlframework_error_status.go  dlframework_framework_manifest.go  dlframework_get_framework_manifest_request.go  dlframework_get_framework_manifests_response.go  dlframework_get_framework_model_manifest_request.go  dlframework_get_model_manifest_request.go  (+14 more)
(+605 files in other folders)
