load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_prefix", "go_test")

go_prefix("github.com/rai-project/dlframework")

go_library(
    name = "go_default_library",
    srcs = [
        "dlframework.pb.go",
        "framework.go",
        "init.go",
        "model.go",
        "prediction.go",
        "service.go",
        "type_parameter.go",
        "utils.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_Masterminds_semver//:go_default_library",
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//sortkeys:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_genproto//googleapis/api/annotations:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_sync//syncmap:go_default_library",
    ],
)

filegroup(
    name = "go_default_library_protos",
    srcs = ["dlframework.proto"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["dlframeworkpb_test.go"],
    library = ":go_default_library",
    deps = [
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//jsonpb:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@org_golang_google_genproto//googleapis/api/annotations:go_default_library",
    ],
)
