load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "downloadmanager.go",
        "init.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_Unknwon_com//:go_default_library",
        "@com_github_hashicorp_go_getter//:go_default_library",
        "@com_github_patrickmn_go_cache//:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
