load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["includetext.go"],
    importpath = "github.com/rai-project/dlframework/scripts",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "scripts",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
