load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "constructor.go",
        "fresh.go",
        "image.go",
        "init.go",
        "prims.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_chewxy_hm//:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
