load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "constructor.go",
        "fresh.go",
        "image.go",
        "init.go",
        "prims.go",
    ],
    importpath = "github.com/rai-project/dlframework/types",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/chewxy/hm:go_default_library",
        "//vendor/github.com/rai-project/config:go_default_library",
        "//vendor/github.com/rai-project/logger:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
