package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_pull", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_binary",
    "go_library",
    "go_test",
)

# load("@distroless//cacerts:cacerts.bzl", "cacerts")
# load("@jessie_package_bundle//file:packages.bzl", "packages")
# load(
#     "//container/rules:docker_toolchains.bzl",
#     "language_tool_layer",
#     "toolchain_container",
# )
# load(
#     "//skylib:packages.bzl",
#     "base_layer_packages",
#     "clang_layer_packages",
#     "java_layer_packages",
#     "python_layer_packages",
# )

container_image(
    name = "carml_base",
    base = "@nvidia_cuda_container_amd64//image",
    debs = [
        "git",
    ],
)

# container_push(
#     name = "push_docker",
#     format = "Docker",
#     image = ":container",
#     registry = "index.docker.io",
#     repository = "atlassianlabs/smith",
#     stamp = True,
#     tag = "{STABLE_BUILD_GIT_TAG}-{STABLE_BUILD_GIT_COMMIT}",
# )
