load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "agent.go",
        "config.go",
        "init.go",
        "options.go",
        "predictors.go",
        "publish.go",
        "registry.go",
        "utils.go",
    ],
    importpath = "github.com/rai-project/dlframework/framework/agent",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//framework/options:go_default_library",
        "//framework/predict:go_default_library",
        "//steps:go_default_library",
        "//vendor/github.com/Unknwon/com:go_default_library",
        "//vendor/github.com/facebookgo/freeport:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/rai-project/config:go_default_library",
        "//vendor/github.com/rai-project/dldataset:go_default_library",
        "//vendor/github.com/rai-project/dldataset/vision:go_default_library",
        "//vendor/github.com/rai-project/grpc:go_default_library",
        "//vendor/github.com/rai-project/libkv/store:go_default_library",
        "//vendor/github.com/rai-project/lock/registry:go_default_library",
        "//vendor/github.com/rai-project/logger:go_default_library",
        "//vendor/github.com/rai-project/nvidia-smi:go_default_library",
        "//vendor/github.com/rai-project/pipeline:go_default_library",
        "//vendor/github.com/rai-project/registry:go_default_library",
        "//vendor/github.com/rai-project/tracer:go_default_library",
        "//vendor/github.com/rai-project/utils:go_default_library",
        "//vendor/github.com/rai-project/uuid:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/golang.org/x/sync/syncmap:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
