load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "default.go",
        "init.go",
        "options.go",
        "types.go",
    ],
    importpath = "github.com/rai-project/dlframework/framework/options",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//vendor/github.com/k0kubun/pp:go_default_library",
        "//vendor/github.com/rai-project/config:go_default_library",
        "//vendor/github.com/rai-project/logger:go_default_library",
        "//vendor/github.com/rai-project/nvidia-smi:go_default_library",
        "//vendor/github.com/rai-project/tracer:go_default_library",
        "//vendor/github.com/rai-project/vipertags:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)
