load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "base.go",
        "defaults.go",
        "image_predictor.go",
        "init.go",
        "predict.go",
        "utils.go",
    ],
    importpath = "github.com/rai-project/dlframework/framework/predict",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//framework/options:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/rai-project/config:go_default_library",
        "//vendor/github.com/rai-project/image:go_default_library",
        "//vendor/github.com/rai-project/image/types:go_default_library",
        "//vendor/github.com/rai-project/logger:go_default_library",
        "//vendor/github.com/rai-project/tracer:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
