load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "builtin_models_static.go",
        "caffe2.pb.go",
        "caffe2_legacy.pb.go",
        "hsm.pb.go",
        "init.go",
        "metanet.pb.go",
        "predictor_consts.pb.go",
        "prof_dag.pb.go",
        "resource_gen.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
