load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "init.go",
        "register.go",
        "registry.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@com_github_Masterminds_semver//:go_default_library",
        "@com_github_elazarl_go_bindata_assetfs//:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
