load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "builtin_models_static.go",
        "graph.go",
        "init.go",
        "mxnet.pb.go",
        "register.go",
        "utils.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//frameworks/common:go_default_library",
        "@com_github_awalterschulze_gographviz//:go_default_library",
        "@com_github_elazarl_go_bindata_assetfs//:go_default_library",
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//sortkeys:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_fatih_set_v0//:go_default_library",
    ],
)

filegroup(
    name = "go_default_library_protos",
    srcs = ["mxnet.proto"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "graph_test.go",
        "model_test.go",
        "mxnetpb_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//:go_default_library",
        "@com_github_GeertJohan_go_rice//:go_default_library",
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//jsonpb:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_k0kubun_pp//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
