load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "allocation_description.pb.go",
        "attr_value.pb.go",
        "builtin_models_static.go",
        "cost_graph.pb.go",
        "device_attributes.pb.go",
        "function.pb.go",
        "graph.pb.go",
        "graph_transfer_info.pb.go",
        "init.go",
        "kernel_def.pb.go",
        "log_memory.pb.go",
        "node_def.pb.go",
        "op_def.pb.go",
        "op_gen_overrides.pb.go",
        "reader_base.pb.go",
        "remote_fused_graph_execute_info.pb.go",
        "resource_gen.go",
        "resource_handle.pb.go",
        "step_stats.pb.go",
        "summary.pb.go",
        "tensor.pb.go",
        "tensor_description.pb.go",
        "tensor_shape.pb.go",
        "tensor_slice.pb.go",
        "types.pb.go",
        "variable.pb.go",
        "versions.pb.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
