load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dataset_request_dataset.go",
        "dlframework_agent.go",
        "dlframework_agents.go",
        "dlframework_container_hardware.go",
        "dlframework_cpu_options.go",
        "dlframework_dataset_request.go",
        "dlframework_execution_options.go",
        "dlframework_feature.go",
        "dlframework_feature_response.go",
        "dlframework_features_response.go",
        "dlframework_framework_manifest.go",
        "dlframework_framework_manifests_response.go",
        "dlframework_g_p_u_options.go",
        "dlframework_images_request.go",
        "dlframework_model_manifest.go",
        "dlframework_model_manifest_type.go",
        "dlframework_model_manifests_response.go",
        "dlframework_prediction_options.go",
        "dlframework_predictor.go",
        "dlframework_predictor_close_response.go",
        "dlframework_predictor_open_request.go",
        "dlframework_reset_request.go",
        "dlframework_reset_response.go",
        "dlframework_urls_request.go",
        "execution_options_trace_level.go",
        "images_request_image.go",
        "model_manifest_model.go",
        "type_parameter.go",
        "urls_request_url.go",
    ],
    importpath = "github.com/rai-project/dlframework/httpapi/models",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/go-openapi/errors:go_default_library",
        "//vendor/github.com/go-openapi/strfmt:go_default_library",
        "//vendor/github.com/go-openapi/swag:go_default_library",
        "//vendor/github.com/go-openapi/validate:go_default_library",
    ],
)
