load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["dlframework_client.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//web/client/predictor:go_default_library",
        "//web/client/registry:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//client:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
    ],
)
