load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "configure_dlframework.go",
        "doc.go",
        "embedded_spec.go",
        "server.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//web/restapi/operations:go_default_library",
        "//web/restapi/operations/predictor:go_default_library",
        "//web/restapi/operations/registry:go_default_library",
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//flagext:go_default_library",
        "@com_github_go_openapi_runtime//middleware:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
        "@com_github_jessevdk_go_flags//:go_default_library",
        "@com_github_tylerb_graceful//:go_default_library",
    ],
)
