load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "collect.go",
        "dataset.go",
        "images.go",
        "init.go",
        "root.go",
        "startall.go",
        "urls.go",
        "utils.go",
        "wrk.go",
    ],
    importpath = "github.com/rai-project/dlframework/framework/cmd/client",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//framework/cmd:go_default_library",
        "//registryquery:go_default_library",
        "//vendor/github.com/k0kubun/pp:go_default_library",
        "//vendor/github.com/klauspost/shutdown2:go_default_library",
        "//vendor/github.com/levigross/grequests:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/rai-project/cmd:go_default_library",
        "//vendor/github.com/rai-project/config:go_default_library",
        "//vendor/github.com/rai-project/evaluation/cmd:go_default_library",
        "//vendor/github.com/rai-project/grpc:go_default_library",
        "//vendor/github.com/rai-project/logger:go_default_library",
        "//vendor/github.com/rai-project/tracer:go_default_library",
        "//vendor/github.com/rai-project/tracer/jaeger:go_default_library",
        "//vendor/github.com/rai-project/tracer/noop:go_default_library",
        "//vendor/github.com/rai-project/tracer/zipkin:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
        "//vendor/github.com/uber/jaeger-client-go:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
