load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "container_tools.go",
        "database.go",
        "database_divergence.go",
        "download.go",
        "download_dataset.go",
        "framework.go",
        "info.go",
        "models.go",
        "predict_dataset.go",
        "root.go",
    ],
    importpath = "github.com/rai-project/dlframework/framework/cmd/server",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//framework/agent:go_default_library",
        "//framework/cmd:go_default_library",
        "//framework/options:go_default_library",
        "//framework/predict:go_default_library",
        "//steps:go_default_library",
        "//vendor/github.com/VividCortex/robustly:go_default_library",
        "//vendor/github.com/cheggaaa/pb:go_default_library",
        "//vendor/github.com/cockroachdb/cmux:go_default_library",
        "//vendor/github.com/davecgh/go-spew/spew:go_default_library",
        "//vendor/github.com/docker/docker/api/types:go_default_library",
        "//vendor/github.com/facebookgo/freeport:go_default_library",
        "//vendor/github.com/k0kubun/pp:go_default_library",
        "//vendor/github.com/klauspost/shutdown2:go_default_library",
        "//vendor/github.com/labstack/echo:go_default_library",
        "//vendor/github.com/levigross/grequests:go_default_library",
        "//vendor/github.com/olekukonko/tablewriter:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/rai-project/cmd:go_default_library",
        "//vendor/github.com/rai-project/config:go_default_library",
        "//vendor/github.com/rai-project/database:go_default_library",
        "//vendor/github.com/rai-project/database/mongodb:go_default_library",
        "//vendor/github.com/rai-project/dldataset:go_default_library",
        "//vendor/github.com/rai-project/dllayer/cmd:go_default_library",
        "//vendor/github.com/rai-project/docker:go_default_library",
        "//vendor/github.com/rai-project/evaluation:go_default_library",
        "//vendor/github.com/rai-project/evaluation/cmd:go_default_library",
        "//vendor/github.com/rai-project/logger/hooks:go_default_library",
        "//vendor/github.com/rai-project/monitoring/monitors:go_default_library",
        "//vendor/github.com/rai-project/nvidia-smi:go_default_library",
        "//vendor/github.com/rai-project/parallel/tunny:go_default_library",
        "//vendor/github.com/rai-project/pipeline:go_default_library",
        "//vendor/github.com/rai-project/tracer:go_default_library",
        "//vendor/github.com/rai-project/utils:go_default_library",
        "//vendor/github.com/rai-project/uuid:go_default_library",
        "//vendor/github.com/rai-project/web/logger:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
        "//vendor/github.com/uber/jaeger-client-go:go_default_library",
        "//vendor/github.com/ulule/deepcopier:go_default_library",
        "//vendor/gopkg.in/mgo.v2/bson:go_default_library",
        "//vendor/upper.io/db.v3:go_default_library",
    ],
)
