load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["standalone.go"],
    importpath = "github.com/rai-project/dlframework/framework/cmd/standalone",
    visibility = ["//visibility:private"],
    deps = [
        "//framework/agent:go_default_library",
        "//framework/cmd:go_default_library",
        "//framework/cmd/server:go_default_library",
        "//vendor/github.com/VividCortex/robustly:go_default_library",
        "//vendor/github.com/klauspost/shutdown2:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/rai-project/caffe/predict:go_default_library",
        "//vendor/github.com/rai-project/mxnet/predict:go_default_library",
        "//vendor/github.com/rai-project/tensorflow/predict:go_default_library",
        "//vendor/github.com/rai-project/tensorrt/predict:go_default_library",
        "//vendor/github.com/rai-project/tracer:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

go_binary(
    name = "standalone",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
