load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "agent.go",
        "init.go",
        "predictor.go",
        "registry.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_libkv//store:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_rai_project_registry//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
