load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "agent.go",
        "cache.go",
        "init.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//frameworks/mxnet:go_default_library",
        "//frameworks/mxnet/predict:go_default_library",
        "@com_github_levigross_grequests//:go_default_library",
        "@com_github_patrickmn_go_cache//:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_grpc//:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
