load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "init.go",
        "main.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//frameworks/mxnet/agent:go_default_library",
        "@com_github_Unknwon_com//:go_default_library",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

go_binary(
    name = "mxnet-agent",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
