load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "download.go",
        "init.go",
        "predict.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//frameworks/mxnet:go_default_library",
        "@com_github_Unknwon_com//:go_default_library",
        "@com_github_anthonynsimon_bild//parallel:go_default_library",
        "@com_github_anthonynsimon_bild//transform:go_default_library",
        "@com_github_levigross_grequests//:go_default_library",
        "@com_github_patrickmn_go_cache//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_rai_project_config//:go_default_library",
        "@com_github_rai_project_logger//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_songtianyi_go_mxnet_predictor//mxnet:go_default_library",
        "@com_github_songtianyi_go_mxnet_predictor//utils:go_default_library",
    ],
)
